<resources>
    <string name="app_name">単語帳アプリ</string>
    <string name="bt_back">戻る</string>
    <string name="bt_search">検索</string>
    <string name="bt_add">+</string>
    <string name="add">追加</string>
    <string name="category">カテゴリ</string>
    <string name="category_name">カテゴリ名</string>
    <string name="empty"></string>
    <string name="jp_lang">日本語</string>
    <string name="ch_lang">中国語</string>
    <string name="en_lang">英語</string>
    <string name="it_remove">削除</string>
    <string name="it_detail">詳細</string>
    <string name="it_edit">編集</string>
    <string name="popup_add_category">新しくカテゴリを追加する</string>
    <string name="popup_add_word_detail">新しく単語の意味を追加する</string>
    <string name="popup_edit_word_detail">単語の意味を変更する</string>
    <string name="language">言語</string>
    <string name="meaning">意味</string>
    <string name="save">保存</string>
    <string name="add_word">単語を追加する</string>
</resources>