<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F4F4"
    tools:context=".WordDetails">

    <TextView
        android:id="@+id/JpLang"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:background="#D6CCCC"
        android:gravity="center"
        android:text="@string/jp_lang"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/EnLnag"
        android:layout_width="382dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="16dp"
        android:background="#D6CCCC"
        android:gravity="center|center_horizontal|fill|left"
        android:paddingLeft="10dp"
        android:text="@string/en_lang"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/JpLang" />

    <TextView
        android:id="@+id/ChLnag"
        android:layout_width="382dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="16dp"
        android:background="#D6CCCC"
        android:gravity="center|left"
        android:paddingLeft="10dp"
        android:text="@string/ch_lang"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EnLnag" />
</androidx.constraintlayout.widget.ConstraintLayout>